# robo-tools

./: .gitignore  LICENSE  README.md  pyproject.toml  requirements.txt
src/robotools/math/: approximate.py  cost.py  integrate.py
src/robotools/model/: dynamics.py  library.py
src/robotools/plan/: trajectory.py  trajectory_optimization.py
tests/model/: test_dynamics.py
tests/plan/: test_trajectory.py  test_trajectory_optimization.py
