[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[project]
name = "robo-tools"
version = "0.0.1"
authors = [
    { name="Alex Choi", email="choialex@uw.edu" },
]
description = "Simple implementations of some tools"
readme = "README.md"
requires-python = ">=3.10"
classifiers = [
    "Programming Language :: Python :: 3",
    "License :: OSI Approved :: MIT License"
]

[tool.hatch.build.targets.wheel]
packages = ["src/robotools"]

[tool.pytest.ini_options]
addopts = [
    "--import-mode=importlib",
    ]
pythonpath = [ "src" ]
